# beam-oracle

./: LICENSE  README.md  beam-oracle.cabal
Database/Beam/Oracle/: Connection.hs  Syntax.hs
examples/: Spec.hs
examples/Chinook/: Schema.hs
src/Database/Beam/: Oracle.hs
src/Database/Beam/Oracle/: Connection.hs  Migrate.hs  Syntax.hs
tests/: Spec.hs
tests/Chinook/: Schema.hs
