name:                 beam-oracle
version:              0.1.0.0
synopsis:             Connection layer between Beam and Oracle Database
description:
homepage:             https://github.com/mulderr/beam-oracle
license:              MIT
license-file:         LICENSE
author:               Maciej Kazulak
maintainer:           kazulakm@gmail.com
category:             Database
build-type:           Simple
cabal-version:        >=1.18
bug-reports:          https://github.com/mulderr/beam-oracle/issues

library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:
    Database.Beam.Oracle
    Database.Beam.Oracle.Connection
    Database.Beam.Oracle.Migrate
    Database.Beam.Oracle.Syntax
  build-depends:
      base                 >=4.7  && <5.0
    , aeson                >=1.2  && <1.5
    , beam-core            >=0.7  && <0.8
    , beam-migrate         >=0.3  && <0.4
    , bytestring           >=0.10 && <0.11
    , conduit              >=1.2  && <1.4
    , dlist                >=0.8  && <0.9
    , free                 >=4.12 && <5.1
    , hashable             >=1.1  && <1.3
    , hashable-time        >=0.2  && <0.3
    , mtl                  >=2.1  && <2.3
    , odpi-simple          >=0.1  && <0.2
    , resourcet            >=1.1  && <1.3
    , scientific           >=0.3  && <0.4
    , text                 >=1.0  && <1.3
    , time                 >=1.6  && <1.10
    , yaml                 >=0.8  && <0.9

source-repository head
  type: git
  location: https://github.com/mulderr/beam-oracle.git
